--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,7 +128,7 @@
                             <div class="tab-pane fade show active" id="nav-places" role="tabpanel" aria-labelledby="nav-places-tab">
                                 <h6>What are you looking for?</h6>
                                 <form action="explorer" method="get">
-                                    <input type="text" value="ไก่" name="keyword" class="form-control custom-select" placeholder="Keyword">
+                                    <input type="text" value="อาหาร" name="keyword" class="form-control custom-select" placeholder="Keyword">
                                     <select name="city" class="custom-select">
                                         <!-- <option value="0" selected>City Destinations</option> -->
                                         <option value="Bangkok">Bangkok</option>
@@ -143,7 +143,7 @@
                                         <option value="SHOP">Shopping</option>
                                         <option value="ACCOMMODATION">Hotels</option>
                                     </select>
-                                    <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true" onclick="myFunction()"></i> Search</button>
+                                    <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true" ></i> Search</button>
                                 </form>
                             </div>
                             <!-- <div class="tab-pane fade" id="nav-events" role="tabpanel" aria-labelledby="nav-events-tab">
@@ -229,7 +229,7 @@
                                 <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.4s">
                                     <div class="catagory-content">
                                         <img src="img/core-img/icon-2.png" alt="">
-                                        <a href="#" restaurants>
+                                        <a href="#restaurants">
                                             <h6>Restaurants</h6>
                                         </a>
                                     </div>
@@ -746,46 +746,8 @@
     <script src="js/others/plugins.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
-    <!-- <script type="text/javascript">
-        // $(document).ready(function() {
-        //   $.ajax({
-        //     url: 'https://tatapi.tourismthailand.org/tatapi/v5/places/search?keyword=อาหาร&location=13.6904831,100.5226014&categories=RESTAURANT&provinceName=Bangkok&radius=20&numberOfResult=10&pagenumber=1&destination=Bangkok&filterByUpdateDate=2019/09/01-2021/12/31',
-        //     type: 'GET',
-        //     dataType: 'json',
-        //     success: function() { alert('hello!'); },
-        //     error: function() { alert('boo!'); },
-        //     beforeSend: setHeader
-        //   });
-        // });
-  
-        function setHeader(xhr) {
-          xhr.setRequestHeader('Accept-Language', 'th');
-          xhr.setRequestHeader('Authorization', 'bearer G(LsNMYQxwthtlPATlMG9zWWTmzqnzcNuK6fQeo86o0KzNSdoF2kMFReYcJ2KwTCpq8QfxXKL00BqUe7Jt4TJtW=====2');
-        }
-      </script> -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-    <!-- <script>
-        function myFunction() {
-            $.ajaxSetup({
-                headers : {
-                    'Authorization' : 'bearer G(LsNMYQxwthtlPATlMG9zWWTmzqnzcNuK6fQeo86o0KzNSdoF2kMFReYcJ2KwTCpq8QfxXKL00BqUe7Jt4TJtW=====2',
-                    'Accept-Language' : 'th'
-                }
-            });
-            $.getJSON("https://tatapi.tourismthailand.org/tatapi/v5/places/search?keyword=อาหาร&location=13.6904831,100.5226014&categories=RESTAURANT&provinceName=Bangkok&radius=20&numberOfResult=10&pagenumber=1&destination=Bangkok&filterByUpdateDate=2019/09/01-2021/12/31", function(result){
-            alert(result)
-            // var obj = JSON.stringify(result.weather.description);
-            // document.getElementById("coord").innerHTML = "&nbsp&nbsp&nbspสถานที่ตั้ง ละติจูด: "+JSON.stringify(result.coord.lon)+" ลองติจูด: "+JSON.stringify(result.coord.lat);
-            // document.getElementById("description").innerHTML = "&nbsp&nbsp&nbspสภาพอากาศ: "+(JSON.stringify(result.weather[0].description)).slice(1, -1);;
-            // document.getElementById("temp").innerHTML = "&nbsp&nbsp&nbspอุณหภูมิ: "+JSON.stringify(result.main.temp)+" °C";
-            // document.getElementById("temp_min").innerHTML = "&nbsp&nbsp&nbspอุณหภูมิต่ำสุด: "+JSON.stringify(result.main.temp_min)+" °C";
-            // document.getElementById("temp_max").innerHTML = "&nbsp&nbsp&nbspอุณหภูมิสูงสุด: "+JSON.stringify(result.main.temp_max)+" °C";
-            // document.getElementById("pressure").innerHTML = "&nbsp&nbsp&nbspความดันอากาศ: "+JSON.stringify(result.main.pressure)+" Pa";
-            // document.getElementById("humidity").innerHTML = "&nbsp&nbsp&nbspความชื้น: "+JSON.stringify(result.main.humidity)+" %";
-            // document.getElementById("speed").innerHTML = "&nbsp&nbsp&nbspความเร็วลม : "+JSON.stringify(result.wind.speed);
-            });
-            }
-    </script> -->
+    <script type="text/javascript">
+    </script>
 </body>
 
 </html>
