--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -256,7 +256,7 @@
                             <p id="02">Bangkok</p>
                         </div>
                         <div class="feature-favourite">
-                            <a href="single-listing?type=RESTAURANT&id=P08000887"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <!--  <a href=""><i class="fa fa-heart-o" aria-hidden="true"></i></a> --> 
                         </div>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                             <p id="12">Maehongson</p>
                         </div>
                         <div class="feature-favourite">
-                            <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                             <p id="22">Krabi</p>
                         </div>
                         <div class="feature-favourite">
-                            <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -307,7 +307,7 @@
                             <p id="32">Krabi</p>
                         </div>
                         <div class="feature-favourite">
-                            <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -324,7 +324,7 @@
                             <p id="42">Krabi</p>
                         </div>
                         <div class="feature-favourite">
-                            <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                         </div>
                     </div>
                 </div>
