--- a/views/index.ejs
+++ b/views/index.ejs
@@ -359,8 +359,9 @@
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
                             <!-- Price -->
-                            <div class="price-start">
-                                <p>FROM 2800-9000 THB</p>
+                            <div class="ratings-map-area d-flex">
+                                <!-- <a href="#">8.5</a> -->
+                                <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -368,7 +369,7 @@
                                     <p>Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -376,8 +377,9 @@
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
                             <!-- Price -->
-                            <div class="price-start">
-                                <p>FROM 500-3000 THB</p>
+                            <div class="ratings-map-area d-flex">
+                                <!-- <a href="#">8.5</a> -->
+                                <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -385,7 +387,7 @@
                                     <p>Maehongson</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -393,8 +395,9 @@
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
                             <!-- Price -->
-                            <div class="price-start">
-                                <p>FROM 1000-3000 THB</p>
+                            <div class="ratings-map-area d-flex">
+                                <!-- <a href="#">8.5</a> -->
+                                <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -402,7 +405,7 @@
                                     <p>Krabi</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -410,8 +413,9 @@
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012357_3.jpg" alt="">
                             <!-- Price -->
-                            <div class="price-start">
-                                <p>FROM 1600-4000 THB</p>
+                            <div class="ratings-map-area d-flex">
+                                <!-- <a href="#">8.5</a> -->
+                                <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -419,7 +423,7 @@
                                     <p>petchaboon</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -427,8 +431,9 @@
                         <div class="single-features-area">
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012342_2.jpg" alt="">
                             <!-- Price -->
-                            <div class="price-start">
-                                <p>FROM 500-1500 THB</p>
+                            <div class="ratings-map-area d-flex">
+                                <!-- <a href="#">8.5</a> -->
+                                <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
@@ -436,7 +441,7 @@
                                     <p>Chumphon</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -468,7 +473,7 @@
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08012272_1.jpeg" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
-                                <a href="#">8.5</a>
+                                <!-- <a href="#">8.5</a> -->
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
@@ -477,7 +482,7 @@
                                     <p>Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -486,7 +491,7 @@
                             <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013955_1.png" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
-                                <a href="#">9.5</a>
+                                <!-- <a href="#">9.5</a> -->
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
@@ -495,7 +500,7 @@
                                     <p>Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -504,7 +509,7 @@
                             <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013903_1.png" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
-                                <a href="#">8.2</a>
+                                <!-- <a href="#">8.2</a> -->
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
@@ -513,7 +518,7 @@
                                     <p>Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -522,7 +527,7 @@
                             <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013963_1.png" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
-                                <a href="#">8.7</a>
+                                <!-- <a href="#">8.7</a> -->
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
@@ -531,7 +536,7 @@
                                     <p>Songkla</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
@@ -540,7 +545,7 @@
                             <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
-                                <a href="#">9.8</a>
+                                <!-- <a href="#">9.8</a> -->
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
@@ -549,7 +554,7 @@
                                     <p>Kanjanaburi</p>
                                 </div>
                                 <div class="feature-favourite">
-                                    <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                                 </div>
                             </div>
                         </div>
