--- a/views/listing.ejs
+++ b/views/listing.ejs
@@ -130,16 +130,16 @@
                         <!-- <img src="img/bg-img/feature-1.jpg" alt=""> -->
                         <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08012272_1.jpeg" alt="">
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p></p>
-                        </div>
+                        </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
                                 <h5>Treat Cafe & Hang Out</h5>
                                 <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
-                                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -150,16 +150,16 @@
                         <!-- <img src="img/bg-img/feature-2.jpg" alt=""> -->
                         <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013955_1.png" alt="">
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p></p>
-                        </div>
+                        </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
                                 <h5>Cafe Jardin</h5>
                                 <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
-                                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -170,16 +170,16 @@
                         <!-- <img src="img/bg-img/feature-3.jpg" alt=""> -->
                         <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013903_1.png" alt="">
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p></p>
-                        </div>
+                        </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
                                 <h5>SEIRYU Sushi</h5>
                                 <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
-                                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -189,16 +189,16 @@
                     <div class="single-features-area mb-50">
                         <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013963_1.png" alt="">
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p></p>
-                        </div>
+                        </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
                                 <h5>9ban Cafe & Kanom Thai</h5>
                                 <p>Songkla</p>
                             </div>
                             <div class="feature-favourite">
-                                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -208,16 +208,16 @@
                     <div class="single-features-area mb-50">
                         <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg" alt="">
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p></p>
-                        </div>
+                        </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
                                 <h5>Bicycle Cafe</h5>
                                 <p>Kanjanaburi</p>
                             </div>
                             <div class="feature-favourite">
-                                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -227,16 +227,16 @@
                     <div class="single-features-area mb-50">
                         <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08012291_1.png" alt="">
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p></p>
-                        </div>
+                        </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
                                 <h5>100 Mahaseth</h5>
                                 <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
-                                <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <!-- <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                             </div>
                         </div>
                     </div>
