--- a/views/index.ejs
+++ b/views/index.ejs
@@ -203,33 +203,33 @@
                     <div class="all-catagories">
                         <div class="row">
                             <!-- Single Catagory Area -->
-                            <div class="col-12 col-sm-6 col-md">
+                            <div class="col-12 col-sm-6 col-md" onclick="window.location='#cities';">
                                 <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.6s">
                                     <div class="catagory-content">
                                         <img src="img/core-img/icon-3.png" alt="">
-                                        <a href="#cities">
+                                        <a>
                                             <h6>Shopping</h6>
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <!-- Single Catagory Area -->
-                            <div class="col-12 col-sm-6 col-md">
+                            <div class="col-12 col-sm-6 col-md" onclick="window.location='#hotels';">
                                 <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.2s">
                                     <div class="catagory-content">
                                         <img src="img/core-img/icon-1.png" alt="">
-                                        <a href="#hotels">
+                                        <a>
                                             <h6>Hotels</h6>
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <!-- Single Catagory Area -->
-                            <div class="col-12 col-sm-6 col-md">
+                            <div class="col-12 col-sm-6 col-md" onclick="window.location='#restaurants';">
                                 <div class="single-catagory-area wow fadeInUpBig" data-wow-delay="0.4s">
                                     <div class="catagory-content">
                                         <img src="img/core-img/icon-2.png" alt="">
-                                        <a href="#restaurants">
+                                        <a>
                                             <h6>Restaurants</h6>
                                         </a>
                                     </div>
